--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,8 +90,8 @@
   <ng-template let-node pTemplate="department">
     {{ node.label }}
   </ng-template>
-</p-organizationChart>
+</p-organizationChart>-->
 
 <h5>Basic</h5>
 <p>Hierarchical data with zero configuration.</p>
-<p-organizationChart [value]="data2"></p-organizationChart> -->
+<p-organizationChart [value]="data2"></p-organizationChart>
